--- a/index.html
+++ b/index.html
@@ -49,6 +49,48 @@
     <div class="gradient">
       <h1>Calm Mate</h1>
       <p>A project Made By Sanuj</p> 
+      <meta charset="UTF-8">
+  <title>Advanced HTML Styled Button</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <style>
+      .btn-demo {
+      background-color: black;
+      color: white;
+    }
+    .btn-demo {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.btn-demo {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 200px;
+  height: 50px;
+  border-radius: 25px;
+}
+.btn-demo {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 200px;
+  height: 50px;
+  border-radius: 25px;
+  font-size: 16px;
+  padding: 10px;
+}
+  </style>
+</head>
+<body>
+  <a href="https://sanuu7.github.io/calmmate.github.io/PlayerTest.html" target="_blank" class="waves-effect waves-light btn btn-demo"><i class="material-icons left">cloud</i>Demo</a>
+</body>
     </div> 
 </body>
 </html>
